EEVEE Next: Cannot Disable Material nor Object Shadowing. #115488

Closed
opened 2023-11-27 18:10:36 +01:00 by thorn-neverwake · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-25 22:37, hash: 1b6cd937ffc8
Worked: N/A, it's Eevee Next. It works in 3.6.

Short description of error
Objects/materials with alpha-mapped transparency have lost the ability to turn shadows off.

Exact steps for others to reproduce the error

  1. Create a plane with an image decal (with alpha channel) mapped to it.
  2. You cannot turn the shadowing off.

Even with the Object Properties shadow unchecked, the shadow still casts. Further, there is no "compatibility" processing from Eevee Material Shadows to be interpreted corrected into Eevee Next.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-25 22:37, hash: `1b6cd937ffc8` Worked: N/A, it's Eevee Next. It works in 3.6. **Short description of error** Objects/materials with alpha-mapped transparency have lost the ability to turn shadows off. **Exact steps for others to reproduce the error** 1. Create a plane with an image decal (with alpha channel) mapped to it. 2. You cannot turn the shadowing off. Even with the Object Properties shadow unchecked, the shadow still casts. Further, there is no "compatibility" processing from Eevee Material Shadows to be interpreted corrected into Eevee Next.
thorn-neverwake added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-11-27 18:10:37 +01:00
Member

I might be misunderstanding how EEVEE next is supposed to be working, but this indeed looks like a bug to me

I _might_ be misunderstanding how EEVEE next is supposed to be working, but this indeed looks like a bug to me
Philipp Oeser added
Status
Confirmed
Module
EEVEE & Viewport
Interest
EEVEE
and removed
Status
Needs Triage
labels 2023-11-28 09:40:14 +01:00
Member

I can't reproduce it.

On Off
imagen imagen

Could you submit a repro file?

Further, there is no "compatibility" processing from Eevee Material Shadows to be interpreted corrected into Eevee Next.

There is, and it should be working (I just checked). If it doesn't for you, please, create a file in 4.0 (or older) that doesn't update correctly for EEVEE Next and include it in a new report (IMPORTANT: Don't save it with 4.1 at any point).

I can't reproduce it. |On|Off| |---|---| |![imagen](/attachments/d1d1fec4-5db9-4e65-821a-36dba6478968)|![imagen](/attachments/3e1dd999-b54b-45ea-b343-b69df6997934)| Could you submit a repro file? > Further, there is no "compatibility" processing from Eevee Material Shadows to be interpreted corrected into Eevee Next. There is, and it should be working (I just checked). If it doesn't for you, please, create a file in 4.0 (or older) that doesn't update correctly for EEVEE Next and include it in a new report (IMPORTANT: Don't save it with 4.1 at any point).

Could you submit a repro file?

Here we go. The scene was created in 4.0. Opened in 4.1, but NOT saved in 4.1.

> Could you submit a repro file? Here we go. The scene was created in 4.0. Opened in 4.1, but NOT saved in 4.1.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-29 15:44:29 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-11-30 15:50:30 +01:00
Brecht Van Lommel added the
Interest
EEVEE & Viewport
label 2023-12-11 16:03:20 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115488
No description provided.